Bug #985 Dashboard Login - Text Fields centre aligned
git-svn-id: https://build.archivesportaleurope.net/svn/apex/trunk@2616 9fd842fd-667d-44da-918d-ff91420b3ae1

--- a/Dashboard/src/main/webapp/css/cssnew.css
+++ b/Dashboard/src/main/webapp/css/cssnew.css
@@ -593,6 +593,7 @@ input[type=password] {
 
 input[type=password].small {
 	width: 200px;
+	text-align: left;
 }
 
 input[type=password].large {
